[workspace]
resolver = "2"
members = [
    "crates/util/*",

	"crates/client/*",

    "crates/core/*",
    "crates/core/world/palette",

    "crates/flare3d",
    "crates/flare3d/example",
]

[workspace.lints.rust]
missing-docs = "warn"
missing-debug-implementations = "warn"
let-underscore-drop = "warn"
single-use-lifetimes = "warn"
trivial-numeric-casts = "warn"
elided-lifetimes-in-paths = "deny"
unused-lifetimes = "forbid"
unused-macro-rules = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"
dyn-drop = "forbid"
ellipsis-inclusive-range-patterns = "forbid"
exported-private-dependencies = "forbid"
uncommon-codepoints = "deny"

[workspace.lints.clippy]
missing-panics-doc = "warn"
missing-errors-doc = "warn"
cloned-instead-of-copied = "warn"
future-not-send = "warn"
if-not-else = "warn"
if-then-some-else-none = "warn"
impl-trait-in-params = "warn"
macro-use-imports = "forbid"
exhaustive-enums = "warn"
str-to-string = "warn"
use-debug = "warn"
iter-without-into-iter = "warn"
decimal-literal-representation = "warn"
