[workspace]
resolver = "2"
# members = ["crates/util/*", "crates/client/*", "crates/core/*", "crates/test/*"]
members = ["crates/util/*", "crates/core/*", "crates/test/*"]

[workspace.lints.rust]
missing-docs = "warn"
missing-debug-implementations = "warn"
let-underscore-drop = "warn"
single-use-lifetimes = "warn"
trivial-numeric-casts = "warn"
elided-lifetimes-in-paths = "deny"
unused-lifetimes = "forbid"
unused-macro-rules = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"
dyn-drop = "forbid"
ellipsis-inclusive-range-patterns = "forbid"
exported-private-dependencies = "forbid"
uncommon-codepoints = "deny"

[workspace.lints.clippy]
missing-panics-doc = "warn"
missing-errors-doc = "warn"
cloned-instead-of-copied = "warn"
future-not-send = "warn"
if-not-else = "warn"
if-then-some-else-none = "warn"
impl-trait-in-params = "warn"
macro-use-imports = "forbid"
exhaustive-enums = "warn"
str-to-string = "warn"
iter-without-into-iter = "warn"
decimal-literal-representation = "warn"
ref-as-ptr = "warn"
unused-trait-names = "warn"
unnecessary-semicolon = "warn"
unnecessary-debug-formatting = "warn"
too-long-first-doc-paragraph = "warn"
ref-option = "warn"
redundant-test-prefix = "warn"
map-with-unused-argument-over-ranges = "warn"
manual-midpoint = "warn"
manual-is-power-of-two = "warn"
ip-constant = "warn"
elidable-lifetime-names = "warn"
coerce-container-to-any = "warn"
