[package]
name = "rimecraft_core"
version = "1.20.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimecraft-primitives = { path = "../primitives", features = [
    "serde",
    "edcode",
] }
rimecraft-caches = { path = "../util/caches", features = ["arc"] }
rimecraft-collections = { path = "../util/collections", features = [
    "id_list",
    "packed_array",
] }
rimecraft-edcode = { path = "../util/edcode", features = ["uuid"] }
rimecraft-event = { path = "../util/event" }
rimecraft-freezer = { path = "../util/freezer" }
rimecraft-nbt-ext = { path = "../util/nbt_ext" }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.18"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.4", features = ["v3", "v4"] }
md-5 = "0.10"
url = "2.4"
sysinfo = "0.29"
bytes = "1.4"
glam = "0.24"
anyhow = "*"
fastsnbt = "*"
fastnbt = "*"
parking_lot = "0.12"
lazy-regex = "3"
cesu8 = "*"
dashmap = "5.4"
bimap = "0.6"
thiserror = "1.0"
rsa = "0.9"
enumn = "0.1"
