[package]
name = "flare3d"
version = "0.1.0"
edition = "2021"
authors = ["KrLite"]
description = "Rust reimplementation of the blaze3d renderer, based on Wgpu"
repository = "https://github.com/rimecraft-rs/rimecraft/"
license = "AGPL-3.0-or-later"
categories = ["game-development"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
color_space = "0.5.3"
# Wgpu
image = "0.24.7"
cgmath = "0.18"
winit = "0.26.0"
wgpu = "0.12.0"
pollster = "0.2"
glam = "0.24"
tracing = "0.1.40"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false
