[package]
name = "flare3d"
version = "0.1.0"
edition = "2021"
authors = ["KrLite"]
description = "Rust reimplementation of the blaze3d renderer, based on Wgpu"
repository = "https://github.com/rimecraft-rs/rimecraft/"
license = "AGPL-3.0-or-later"
categories = ["game-development"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
color_space = "0.5"
# Wgpu
image = "0.24"
cgmath = "0.18"
winit = "0.29"
wgpu = "0.18"
glam = "0.24"
tracing = "0.1"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
