[package]
name = "flare3d"
version = "0.1.0"
edition = "2021"
authors = ["KrLite"]
description = "Rust reimplementation of the blaze3d renderer, based on Wgpu"
repository = "https://github.com/rimecraft-rs/rimecraft/"
license = "AGPL-3.0-or-later"
categories = ["game-development"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
color_space = "0.5"
# Wgpu
image = "0.24"
glam = "0.25.0"
winit = { version = "0.29", default-features = false, features = [
  "rwh_05",
  "x11",
  "wayland",
  "wayland-dlopen",
  "wayland-csd-adwaita",
] }
wgpu = "0.18"
tracing = "0.1"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
futures-executor = "0.3"
