[package]
name = "rimecraft"
version = "1.19.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3.3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"
once_cell = "1.18"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
toml = "0.7"
uuid = { version = "1.3", features = ["v3", "v4"] }
datafixerupper = { version = "*", path = "../datafixerupper" }
md-5 = "0.10"
url = "2.4"
sysinfo = "0.29"
bytes = "1.4"
glam = "0.24"
tokio = "1.28"
winit = { version = "0.28", optional = true }
wgpu = { version = "0.16", optional = true }

[features]
default = ["client"]
client = ["dep:winit", "dep:wgpu"]
dedecated_server = []
