[package]
name = "rimecraft"
version = "1.20.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap_lex = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
once_cell = "1.18"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
toml = "0.7"
uuid = { version = "1.3", features = ["v3", "v4"] }
md-5 = "0.10"
url = "2.4"
sysinfo = "0.29"
bytes = "1.4"
glam = "0.24"
tokio = { version = "1.28", features = ["full"] }
winit = { version = "0.28", optional = true }
wgpu = { version = "0.16", optional = true }
anyhow = "*"
fastsnbt = "*"
fastnbt = { version = "*", git = "https://github.com/rimecraft-rs/fastnbt" }
parking_lot = "0.12"
lazy-regex = "2"
cesu8 = "*"
hashbrown = "0.14"
dashmap = "5.4"

[features]
# Developing server for now
default = ["dedicated_server"]
client = ["dep:winit", "dep:wgpu"]
dedicated_server = []
