[package]
name = "rimecraft-primitives"
version = "0.1.0"
edition = "2021"
authors = ["JieningYu <jiening.yu@outlook.com>"]
description = "Primitive types and traits for building Rimecraft applications"
repository = "https://github.com/rimecraft-rs/rimecraft/"
license = "AGPL-3.0-or-later"
categories = ["game-development"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", optional = true }
rimecraft-caches = { path = "../util/caches", optional = true }
once_cell = { version = "1.18", optional = true }
rimecraft-edcode = { path = "../util/edcode", optional = true }
bytes = { version = "*", optional = true }
anyhow = { version = "*", optional = true }
rimecraft-serde-update = { path = "../util/serde-update", optional = true, features = [
    "erased",
] }

[features]
default = ["caches"]
serde = ["dep:serde", "dep:rimecraft-serde-update"]
caches = ["dep:rimecraft-caches", "dep:once_cell"]
edcode = ["dep:rimecraft-edcode", "dep:bytes", "dep:anyhow"]
