[package]
name = "flare3d-example"
version = "0.1.0"
edition = "2021"
authors = ["KrLite"]
description = "Example of flare3d"
repository = "https://github.com/rimecraft-rs/rimecraft/"
license = "AGPL-3.0-or-later"
categories = ["game-development"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
flare3d = { path = "../" }
winit = "0.28"
wgpu = "0.18"
futures = "0.3.29"
