[package]
name = "rimecraft-attachment"
version = "0.1.0"
edition = "2021"
authors = ["JieningYu <jiening.yu@outlook.com>"]
description = "Type erased data attachment system"
repository = "https://github.com/rimecraft-rs/rimecraft/"
license = "AGPL-3.0-or-later"
categories = ["rust-patterns", "data-structures"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
serde = { version = "1.0", optional = true }
erased-serde = { version = "0.4", optional = true }
rimecraft-serde-update = { path = "../serde-update", optional = true, features = [
    "erased",
] }
parking_lot = { version = "0.12", optional = true, features = ["arc_lock"] }

[features]
default = ["serde"]
serde = [
    "dep:serde",
    "dep:erased-serde",
    "dep:rimecraft-serde-update",
    "dep:parking_lot",
]
