[package]
name = "rimecraft-caches"
version = "0.1.0"
edition = "2021"
authors = ["JieningYu <jiening.yu@outlook.com>"]
description = "Thread safe and hash-based caches implementation"
repository = "https://github.com/rimecraft-rs/rimecraft/"
license = "AGPL-3.0-or-later"
categories = ["caching"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
dashmap = "5.5"

[features]
arc = []
