[package]
name = "rimecraft-freezer"
version = "0.1.0"
edition = "2021"
authors = ["JieningYu <jiening.yu@outlook.com>"]
description = "Freeze data for immutable access"
repository = "https://github.com/rimecraft-rs/rimecraft/"
license = "AGPL-3.0-or-later"
categories = ["rust-patterns"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]

[lints]
workspace = true
