[package]
name = "rimecraft-identifier"
version = "0.1.0"
edition = "2021"
authors = ["JieningYu <jiening.yu@outlook.com>"]
description = "Rust implementation of Minecraft resource location"
repository = "https://github.com/rimecraft-rs/rimecraft/"
license = "AGPL-3.0-or-later"
categories = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
serde = { version = "1.0", optional = true }
rimecraft-edcode = { path = "../edcode", optional = true }
rimecraft-registry = { path = "../registry", optional = true }

[features]
serde = ["dep:serde"]
edcode = ["dep:rimecraft-edcode"]
vanilla = []
vanilla-registry = ["vanilla", "dep:rimecraft-registry"]

[lints]
workspace = true
