[package]
name = "rimecraft-serde-update"
version = "0.1.0"
edition = "2021"
authors = ["JieningYu <jiening.yu@outlook.com>"]
description = "Traits describing types that can be updated from a serialized representation"
repository = "https://github.com/rimecraft-rs/rimecraft/"
license = "AGPL-3.0-or-later"
categories = ["data-structures"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
erased-serde = { version = "0.4", optional = true }


[features]
erased = ["dep:erased-serde"]
