[package]
name = "rimecraft-client-input"
version = "0.1.0"
edition = "2024"
authors = ["KrLite"]
description = "Minecraft client inputs"
repository = "https://github.com/rimecraft-rs/rimecraft/"
license = "AGPL-3.0-or-later"
categories = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
glam = "0.25.0"

[lints]
workspace = true
