[package]
name = "rimecraft-client-key-bind"
version = "0.1.0"
edition = "2024"
authors = ["KrLite"]
description = "Minecraft client key binds"
repository = "https://codeberg.org/DM-Earth/rimecraft/"
license = "AGPL-3.0-or-later"
categories = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
rimecraft-keyboard = { path = "../../util/keyboard" }
rimecraft-mouse = { path = "../../util/mouse" }

[lints]
workspace = true
