[package]
name = "rimecraft-client-key-bind"
version = "0.1.0"
edition = "2024"
authors = ["KrLite"]
description = "Minecraft client key binds"
repository = "https://codeberg.org/DM-Earth/rimecraft/"
license = "AGPL-3.0-or-later"
categories = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
rimecraft-keyboard = { path = "../../util/keyboard" }
rimecraft-mouse = { path = "../../util/mouse" }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
rimecraft-test-global = { path = "../../test/global", package = "rimecraft-test-global", features = [
    "keyboard",
    "mouse",
] }
rimecraft-global-cx = { path = "../../core/global-cx" }

[features]
default = ["empty-ext"]
empty-ext = ["dep:serde"]

[lints]
workspace = true
