[package]
name = "rimecraft-client-key-bind"
version = "0.1.0"
edition = "2024"
authors = ["KrLite"]
description = "Minecraft client key binds"
repository = "https://codeberg.org/DM-Earth/rimecraft/"
license = "AGPL-3.0-or-later"
categories = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
rimecraft-global-cx = { path = "../../core/global-cx" }
rimecraft-keyboard = { path = "../../util/keyboard" }
rimecraft-mouse = { path = "../../util/mouse" }

[dev-dependencies]
rimecraft-test-global = { path = "../../test/global", package = "rimecraft-test-global", features = [
    "keyboard",
    "mouse",
    "key-bind",
] }

[features]
default = ["unit-ext"]
unit-ext = []

[lints]
workspace = true
