[package]
name = "rimecraft-client-option"
version = "0.1.0"
edition = "2024"
authors = ["KrLite"]
description = "Minecraft client game options"
repository = "https://codeberg.org/DM-Earth/rimecraft/"
license = "AGPL-3.0-or-later"
categories = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
rimecraft-text = { path = "../../core/text" }
rimecraft-math = { path = "../../util/math" }
enum-iterator = "2.0.0"

[lints]
workspace = true
