[package]
name = "rimecraft-client-ui"
version = "0.1.0"
edition = "2024"
authors = ["KrLite"]
description = "Minecraft client UI framework"
repository = "https://codeberg.org/DM-Earth/rimecraft/"
license = "AGPL-3.0-or-later"
categories = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
rimecraft-render-math = { path = "../../util/render-math" }
rimecraft-client-narration = { path = "../narration" }
rimecraft-keyboard = { path = "../../util/keyboard" }
rimecraft-mouse = { path = "../../util/mouse" }
num-traits = "0.2"
glam = "0.30"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
