[package]
name = "rimecraft-advanement"
version = "0.1.0"
edition = "2021"
authors = ["C191239 <zhushunzhong2025@i.pkuschool.edu.cn>"]
description = "Rimecraft advancement"
repository = "https://github.com/rimecraft-rs/rimecraft/"
license = "AGPL-3.0-or-later"
categories = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
rimecraft-text = { path = "../text" }
rimecraft-identifier = { path = "../../util/identifier" ,features = ["vanilla"]}

[lints]
workspace = true
