[package]
name = "rimecraft-advancement"
version = "0.1.0"
edition = "2021"
authors = ["C191239 <zhushunzhong2025@i.pkuschool.edu.cn>"]
description = "Rimecraft advancement"
repository = "https://github.com/rimecraft-rs/rimecraft/"
license = "AGPL-3.0-or-later"
categories = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
rimecraft-text = { path = "../text" }
rimecraft-identifier = { path = "../../util/identifier" }
rimecraft-item = { path = "../item" }
rimecraft-fmt = { path = "../../util/fmt" }
rimecraft-global-cx = { path = "../global-cx" }
rimecraft-edcode2 = { path = "../../util/edcode2", optional = true }
rimecraft-registry = { path = "../registry" }
rimecraft-local-cx = { path = "../local-cx" }

[lints]
workspace = true

[features]
default = ["edcode"]
edcode = ["dep:rimecraft-edcode2", "rimecraft-text/edcode"]
