[package]
name = "rimecraft-block"
version = "0.1.0"
edition = "2021"
authors = ["JieningYu <jiening.yu@outlook.com>"]
description = "Minecraft Block primitives"
repository = "https://github.com/rimecraft-rs/rimecraft/"
license = "AGPL-3.0-or-later"
categories = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
rimecraft-registry = { path = "../registry" }
rimecraft-state = { path = "../state" }
rimecraft-voxel-math = { path = "../../util/voxel-math" }

[features]

[lints]
workspace = true
