[package]
name = "rimecraft-block"
version = "0.1.0"
edition = "2024"
authors = ["JieningYu <jiening.yu@outlook.com>"]
description = "Minecraft block primitives"
repository = "https://codeberg.org/DM-Earth/rimecraft/"
license = "AGPL-3.0-or-later"
categories = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
rimecraft-global-cx = { path = "../global-cx" }
rimecraft-registry = { path = "../registry" }
rimecraft-state = { path = "../state" }
rimecraft-voxel-math = { path = "../../util/voxel-math" }
dsyn = { path = "../../util/dsyn", package = "rimecraft-dsyn" }
voxel-shape = { path = "../../util/voxel-shape", package = "rimecraft-voxel-shape" }
rcutil = { path = "../../util/rcutil", package = "rimecraft-util" }
remap = { path = "../../util/remap", package = "rimecraft-remap" }

[features]

[lints]
workspace = true
